package msg.request.console;
option java_package="com.lxd.protobuf.msg.request.console";
option java_outer_classname="Console";

import "R_C_AddFile.proto";
import "R_C_UpdateFile.proto";
import "R_C_DeleteFile.proto";
import "R_C_DownloadFile.proto";
import "R_C_SyncFile.proto";

message Console_{ 
	///< 新增文件
	optional AddFile_ addFile = 1;
	///< 修改文件
	optional UpdateFile_ updateFile = 2;
	///< 删除文件
	optional DeleteFile_ deleteFile = 3;
	///< 下载文件
	optional DownloadFile_ downloadFile = 4;
	///< 同步文件信息
	optional SyncFile_ syncFile = 5;
	///< 用户编号
	required string user_name = 6;
}